fixed placeholder issue when text too long

--- a/src/app/home/lgd/new-deal-score/new-deal-score.component.css
+++ b/src/app/home/lgd/new-deal-score/new-deal-score.component.css
@@ -68,3 +68,12 @@ margin-bottom: 8px;
   clear: both;
 }
 
+.selectCustomHeader{
+  font-size: 14px;
+  font-weight: bold;
+  font-style: italic;
+  white-space: normal;
+  line-height: 20px;
+}
+
+
